--- a/project8.html
+++ b/project8.html
@@ -37,8 +37,8 @@
         </nav>
         <section class="page-section project8" style="background-color: #daf2e9;" id="project8">
             <div class="container">
-                <div class="row text-secondary justify-content-center">                    
-                    <div class="col-10" style="width: 80%;">
+                <div class="row text-secondary justify-content-center">
+                    <div class="col-lg-10">
                         <!-- Masthead Heading-->
                         <h1 class="page-section-heading text-secondary pt-6 mb-0">Pyuk</h1>
                         <!-- Divider-->
@@ -48,7 +48,23 @@
                         <!-- Masthead Subheading-->
                         <p class="lead text-secondary mb-4">Pyuk is a 2D physics platformer game made in 48 hours for Global Game Jam 2024.</p>
                     </div>
-                    <div class="col-1" style="width: 50%;">
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-3">
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Date</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Jan 2024</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Role</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Programmer</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Project Type</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Game Jam - Team</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Link</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;"><a href="https://euruss.itch.io/pyuk" target="_blank">Play here!</a></p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Engine</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Unity</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Language</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">C#</p></div>
+                    </div>
+                    <div class="col-lg-7">
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">My work</p></div>
                         <ul>
                             <li><p class="h5" style="font-weight:500;">Modular code implementing consumption and discharge of the critters via Unity's Action-Event systems that allow easy integration into other developers' code.</p></li>
@@ -63,20 +79,6 @@
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">During this game jam I learned a lot about writing code that is easy to integrate into other systems of the game, working closely with my teammates.</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">As it was a Global Game Jam, I had the pleasure of meeting and socializing with other developers at the jam site, even finding a new teammate.</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Teaming up with two seasoned Unity developers, I was dedicated to learning from their experiences. Had a lot of long talks regarding best practices, code architecture and design.</p></div>
-                    </div>
-                    <div class="col-1" style="width: 30%;justify-content: end;">
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Date</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">Jan 2024</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Role</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">Programmer</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Project Type</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">Game Jam - Team</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Link</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;"><a href="https://euruss.itch.io/pyuk" target="_blank">Play here!</a></p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Engine</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">Unity</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Language</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">C#</p></div>
                     </div>
                 </div>
                 <div class="row justify-content-center mt-5">
