--- a/project6.html
+++ b/project6.html
@@ -37,8 +37,8 @@
         </nav>
         <section class="page-section project6" style="background-color: #daf2e9;" id="project6">
             <div class="container">
-                <div class="row text-secondary justify-content-center">                    
-                    <div class="col-10" style="width: 80%;">
+                <div class="row text-secondary justify-content-center">
+                    <div class="col-lg-10">
                         <!-- Masthead Heading-->
                         <h1 class="page-section-heading text-secondary pt-6 mb-0">The Atlantis Inquiry</h1>
                         <!-- Divider-->
@@ -48,7 +48,9 @@
                         <!-- Masthead Subheading-->
                         <p class="lead text-secondary mb-4">The Atlantis Inquiry is a 2D detective mystery made in one week for Brackeys Game Jam.</p>
                     </div>
-                    <div class="col-1" style="width: 50%;">
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-7">
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">My work</p></div>
                         <ul>
                             <li><p class="h5" style="font-weight:500;">Swimming and interaction mechanics.</p></li>
@@ -63,19 +65,19 @@
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Outcomes</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">For this game jam I had to learn how to use a new tool quickly and then implement a dialogue system using it. It was a challenging system to build as it was complex and connected to other game systems such as UI and clue/suspect/motive system.</p></div>
                     </div>
-                    <div class="col-1" style="width: 30%;justify-content: end;">
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Date</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">Aug 2023</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Role</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">Programmer</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Project Type</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">Game Jam - Team</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Link</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;"><a href="https://duckgoosegames.itch.io/the-atlantis-inquiry" target="_blank">Play here!</a></p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Engine</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">Unity</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Language</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">C#</p></div>
+                    <div class="col-lg-3 text-end">
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Date</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Aug 2023</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Role</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Programmer</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Project Type</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Game Jam - Team</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Link</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;"><a href="https://duckgoosegames.itch.io/the-atlantis-inquiry" target="_blank">Play here!</a></p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Engine</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Unity</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Language</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">C#</p></div>
                     </div>
                 </div>
                 <div class="row justify-content-center mt-5">
