--- a/project7.html
+++ b/project7.html
@@ -37,8 +37,8 @@
         </nav>
         <section class="page-section project7" style="background-color: #daf2e9;" id="project7">
             <div class="container">
-                <div class="row text-secondary justify-content-center">                    
-                    <div class="col-10" style="width: 80%;">
+                <div class="row text-secondary justify-content-center">
+                    <div class="col-lg-10">
                         <!-- Masthead Heading-->
                         <h1 class="page-section-heading text-secondary pt-6 mb-0">Total Corruption</h1>
                         <!-- Divider-->
@@ -48,7 +48,9 @@
                         <!-- Masthead Subheading-->
                         <p class="lead text-secondary mb-4">A metroidvania game made in a month for Metroidvania Month Game Jam.</p>
                     </div>
-                    <div class="col-1" style="width: 50%;">
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-7">
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">My work</p></div>
                         <ul>
                             <li><p class="h5" style="font-weight:500;">Integration of Schema, a plugin that helps with coding behaviour trees for Unity.</p></li>
@@ -57,19 +59,19 @@
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Outcomes</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">With this project, I am happy that I overcame the challenges of learning to use and integrate a tool I had never used before in order to implement a behaviour tree and then, implementing the AI behaviour of the game using that tool. It helped me figure out how other developers' systems work by reading the code, as the documentation of the tool was limited. I even found a bug with it and contacted the developer seeking help, who was kind enough to provide a quick update to the tool!</p></div>
                     </div>
-                    <div class="col-1" style="width: 30%;justify-content: end;">
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Date</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">Nov 2023 - Dec 2023</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Role</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">Programmer</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Project Type</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">Game Jam - Team</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Link</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;"><a href="https://duckgoosegames.itch.io/total-corruption" target="_blank">Play here!</a></p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Engine</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">Unity</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Language</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">C#</p></div>
+                    <div class="col-lg-3 text-end">
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Date</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Nov 2023 - Dec 2023</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Role</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Programmer</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Project Type</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Game Jam - Team</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Link</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;"><a href="https://duckgoosegames.itch.io/total-corruption" target="_blank">Play here!</a></p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Engine</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Unity</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Language</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">C#</p></div>
                     </div>
                 </div>
                 <div class="row justify-content-center mt-5">
