--- a/project8.html
+++ b/project8.html
@@ -50,20 +50,6 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-lg-3">
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Date</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Jan 2024</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Role</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Programmer</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Project Type</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Game Jam - Team</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Link</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;"><a href="https://euruss.itch.io/pyuk" target="_blank">Play here!</a></p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Engine</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Unity</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Language</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">C#</p></div>
-                    </div>
                     <div class="col-lg-7">
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">My work</p></div>
                         <ul>
@@ -79,6 +65,20 @@
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">During this game jam I learned a lot about writing code that is easy to integrate into other systems of the game, working closely with my teammates.</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">As it was a Global Game Jam, I had the pleasure of meeting and socializing with other developers at the jam site, even finding a new teammate.</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Teaming up with two seasoned Unity developers, I was dedicated to learning from their experiences. Had a lot of long talks regarding best practices, code architecture and design.</p></div>
+                    </div>
+                    <div class="col-lg-3 text-end">
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Date</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Jan 2024</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Role</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Programmer</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Project Type</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Game Jam - Team</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Link</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;"><a href="https://euruss.itch.io/pyuk" target="_blank">Play here!</a></p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Engine</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Unity</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Language</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">C#</p></div>
                     </div>
                 </div>
                 <div class="row justify-content-center mt-5">
