--- a/project2.html
+++ b/project2.html
@@ -37,8 +37,8 @@
         </nav>
         <section class="page-section project2" style="background-color: #daf2e9;" id="project2">
             <div class="container">
-                <div class="row text-secondary justify-content-center">                    
-                    <div class="col-10" style="width: 80%;">
+                <div class="row text-secondary justify-content-center">
+                    <div class="col-lg-10">
                         <!-- Masthead Heading-->
                         <h1 class="page-section-heading text-secondary pt-6 mb-0">Journey to Paradice</h1>
                         <!-- Divider-->
@@ -48,7 +48,9 @@
                         <!-- Masthead Subheading-->
                         <p class="lead text-secondary mb-4">A top-down combat game based on dice rolls. Made in 48 hours for GMTK Jam.</p>
                     </div>
-                    <div class="col-1" style="width: 50%;">
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-7">
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">My work</p></div>
                         <ul>
                             <li><p class="h5" style="font-weight:500;">Grid generation via scriptable objects.</p></li>
@@ -57,19 +59,19 @@
                             <li><p class="h5" style="font-weight:500;">UI.</p></li>
                         </ul>                        
                     </div>
-                    <div class="col-1" style="width: 30%;justify-content: end;">
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Date</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">Jul 2022</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Role</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">Programmer</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Project Type</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">Game Jam - Team</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Link</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;"><a href="https://duckgoosegames.itch.io/journey-to-paradice" target="_blank">Play here!</a></p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Engine</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">Unity</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Language</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">C#</p></div>
+                    <div class="col-lg-3 text-end">
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Date</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Jul 2022</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Role</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Programmer</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Project Type</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Game Jam - Team</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Link</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;"><a href="https://duckgoosegames.itch.io/journey-to-paradice" target="_blank">Play here!</a></p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Engine</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Unity</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Language</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">C#</p></div>
                     </div>
                 </div>
                 <div class="row justify-content-center mt-5">
