--- a/project9.html
+++ b/project9.html
@@ -37,8 +37,8 @@
         </nav>
         <section class="page-section project8" style="background-color: #daf2e9;" id="project8">
             <div class="container">
-                <div class="row text-secondary justify-content-center">                    
-                    <div class="col-10" style="width: 80%;">
+                <div class="row text-secondary justify-content-center">
+                    <div class="col-lg-10">
                         <!-- Masthead Heading-->
                         <h1 class="page-section-heading text-secondary pt-6 mb-0">Capture the Planets</h1>
                         <!-- Divider-->
@@ -49,7 +49,9 @@
                         <p class="lead text-secondary mb-4">As a mentee under Ubisoft's Develop at Ubisoft programming mentorship program, I created a 2D game named Capture the Planets from scratch using the provided C++ API, under guidance of an expert programmer at Ubisoft.</p>
                         <p class="lead text-secondary mb-4">I am currently working on an update for this game and will be uploading the executable for it in the near future!</p>
                     </div>
-                    <div class="col-1" style="width: 50%;">
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-7">
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">My work</p></div>
                         <ul>
                             <li><p class="h5" style="font-weight:500;">Got familiar with the provided API and built my game on it.</p></li>
@@ -59,24 +61,24 @@
                             <li><p class="h5" style="font-weight:500;">Experimented with AI pathfinding algorithms and entity component systems</p></li>
                         </ul>                        
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Outcomes</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">During this program I had a great experience learning from my mentor Antoine Gay.</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">I had a great experience learning from my mentor.</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">I learned how to write organized and structured code.</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">I learned about scope and time management, working incrementally, making fast and simple prototypes.</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">I created a game that I love from scratch using C++ and presented it to other people at Ubisoft Leamington.</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">I created a game that I love from scratch using C++ and presented it to a group of developers and other mentees at Ubisoft Leamington.</p></div>
                     </div>
-                    <div class="col-1" style="width: 30%;justify-content: end;">
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Date</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">Oct 2023 - Jan 2024</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Role</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">Programmer</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Project Type</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">Solo - Mentorship</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Link</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">Soon!</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Engine</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">Custom API</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="text-align:right; color:#f14e52;">Language</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="text-align:right; font-weight:500;">C++</p></div>
+                    <div class="col-lg-3 text-end">
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Date</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Oct 2023 - Jan 2024</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Role</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Programmer</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Project Type</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Solo - Mentorship</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Link</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Soon!</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Engine</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Custom API</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Language</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">C++</p></div>
                     </div>
                 </div>
                 <div class="row justify-content-center mt-5">
