--- a/project2.html
+++ b/project2.html
@@ -88,11 +88,11 @@
                         <img class="img-fluid" src="assets/img/dice/4.jpg" alt="..." />
                     </div>
                 </div>
-                <div class="row mt-5">
+                <div class="row mt-5 text-center">
                     <div class="col-lg-6">
                         <a class="btn btn-dark mx-1" href="project3.html"><p class="h4 mb-0" style="font-weight: 550;"><i class="fas fa-fw fa-circle-left me-2"></i>Previous Project</p></a>
                     </div>
-                    <div class="col-lg-6 text-end">
+                    <div class="col-lg-6">
                         <a class="btn btn-dark mx-1" href="project1.html"><p class="h4 mb-0" style="font-weight: 550;">Next Project<i class="fas fa-fw fa-circle-right ms-2"></i></p></a>
                     </div>
                 </div>
@@ -106,7 +106,7 @@
                     <div class="col-lg-6 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4" style="color: #95e0cc;">Email</h4>
                         <p class="lead mb-0">
-                            <a href=mailto:"aybikekilic7@gmail.com">aybikekilic7@gmail.com</a>
+                            <a id="email" href=mailto:""></a>
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
