--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                 </div>
                 <p class="h4 text-secondary" style="text-align:left">About Me</p>
                 <p class="lead text-secondary" style="text-align:left">Hello! I am Aybike. A programmer based in London, UK. I am an enthusiastic software developer keen on learning, unlearning and relearning. A good team player who enjoys challenges and an analytical thinker with good problem-solving skills.</p>
-                <p class="lead text-secondary" style="text-align:left">I have one year of experience working in software development with C++ and I am currently nearing the end of a master's degree on Computer Games Technology at City, University of London. I have experience with game engines and APIs such as Unity, Unreal and OpenGL.</p>
+                <p class="lead text-secondary" style="text-align:left">I studied computer engineering for my undergraduate and I am currently nearing the end of a master's degree on Computer Games Technology at City, University of London. I have experience with game engines and commonly used game development APIs.</p>
+                <p class="lead text-secondary" style="text-align:left">I have one year of professional working experience as a software engineer using C++ and Qt. Due to a non-disclosure agreement I am unable to share details about the project, some info and media can be found on the <a href="https://www.simsoft.com.tr/en/our-solutions/simulator-systems/defense-and-security/marine---bridge-training-simulator" target="_blank">official page</a>.</p>
                 <p class="lead text-secondary" style="text-align:left">I enjoy participating in game jams whenever possible. So far, I have completed and published games for 8 game jams. I enjoy working on game jam projects with a team, which allowed me to meet and work with people from different countries and disciplines, honing my soft skills as well as my technical skills.</p>
                 <p class="lead text-secondary" style="text-align:left">If you like my work, consider following me on <a href="https://euruss.itch.io/" target="_blank">itch.io</a>!</p></div>
             </div>
@@ -158,7 +159,7 @@
                     <div class="col-lg-6 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4" style="color: #95e0cc;">Email</h4>
                         <p class="lead mb-0">
-                            <a href=mailto:"aybikekilic7@gmail.com">aybikekilic7@gmail.com</a>
+                            <a id="email" href=mailto:""></a>
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
