--- a/project6.html
+++ b/project6.html
@@ -106,11 +106,11 @@
                         <img class="img-fluid" src="assets/img/tai/7.jpg" alt="..." />
                     </div>
                 </div>
-                <div class="row mt-5">
+                <div class="row mt-5 text-center">
                     <div class="col-lg-6">
                         <a class="btn btn-dark mx-1" href="project7.html"><p class="h4 mb-0" style="font-weight: 550;"><i class="fas fa-fw fa-circle-left me-2"></i>Previous Project</p></a>
                     </div>
-                    <div class="col-lg-6 text-end">
+                    <div class="col-lg-6">
                         <a class="btn btn-dark mx-1" href="project5.html"><p class="h4 mb-0" style="font-weight: 550;">Next Project<i class="fas fa-fw fa-circle-right ms-2"></i></p></a>
                     </div>
                 </div>
@@ -124,7 +124,7 @@
                     <div class="col-lg-6 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4" style="color: #95e0cc;">Email</h4>
                         <p class="lead mb-0">
-                            <a href=mailto:"aybikekilic7@gmail.com">aybikekilic7@gmail.com</a>
+                            <a id="email" href=mailto:""></a>
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
