--- a/project9.html
+++ b/project9.html
@@ -70,7 +70,7 @@
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Date</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Oct 2023 - Jan 2024</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Role</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Programmer</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">All</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Project Type</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Solo - Mentorship</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Link</p></div>
@@ -86,8 +86,8 @@
                         src="https://www.youtube.com/embed/Mf7QNJf8AF8">
                     </iframe>
                 </div>
-                <div class="row mt-5">
-                    <div class="col-lg-12 text-end">
+                <div class="row mt-5 text-center">
+                    <div class="col-lg-12">
                         <a class="btn btn-dark mx-1" href="project8.html"><p class="h4 mb-0" style="font-weight: 550;">Next Project<i class="fas fa-fw fa-circle-right ms-2"></i></p></a>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                     <div class="col-lg-6 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4" style="color: #95e0cc;">Email</h4>
                         <p class="lead mb-0">
-                            <a href=mailto:"aybikekilic7@gmail.com">aybikekilic7@gmail.com</a>
+                            <a id="email" href=mailto:""></a>
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
