New projects and resume update

--- a/index.html
+++ b/index.html
@@ -66,13 +66,31 @@
                 <p class="lead text-center" style="color: #daf2e9;">Click on a project for more details.</p>
                 <!-- Portfolio Grid Items-->
                 <div class="row justify-content-center">
+                    <!-- Portfolio Item 11-->
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <a href="project11.html">
+                            <div class="portfolio-item mx-auto">
+                                <img class="img-fluid" src="assets/img/tank.png" alt="..." />
+                            </div>
+                            <p class="h4 text-center mt-2">Battle City Remake with Custom Engine (C++/SFML)</p>
+                        </a>
+                    </div>
+                    <!-- Portfolio Item 10-->
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <a href="project10.html">
+                            <div class="portfolio-item mx-auto">
+                                <img class="img-fluid" src="assets/gifs/mr.gif" alt="..." />
+                            </div>
+                            <p class="h4 text-center mt-2">Monza Run (C++/OpenGL)</p>
+                        </a>
+                    </div>
                     <!-- Portfolio Item 9-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <a href="project9.html">
                             <div class="portfolio-item mx-auto">
                                 <img class="img-fluid" src="assets/gifs/ctp.gif" alt="..." />
                             </div>
-                            <p class="h3 text-center mt-2">Capture the Planets</p>
+                            <p class="h4 text-center mt-2">Capture the Planets (C++)</p>
                         </a>
                     </div>
                     <!-- Portfolio Item 8-->
@@ -81,7 +99,7 @@
                             <div class="portfolio-item mx-auto">
                                 <img class="img-fluid" src="assets/gifs/pyuk.gif" alt="..." />
                             </div>
-                            <p class="h3 text-center mt-2">Pyuk</p>
+                            <p class="h4 text-center mt-2">Pyuk (Unity/C#)</p>
                         </a>
                     </div>
                     <!-- Portfolio Item 7-->
@@ -90,7 +108,7 @@
                             <div class="portfolio-item mx-auto">
                                 <img class="img-fluid" src="assets/gifs/ta.gif" alt="..." />
                             </div>
-                            <p class="h3 text-center mt-2">Total Corruption</p>
+                            <p class="h4 text-center mt-2">Total Corruption (Unity/C#)</p>
                         </a>
                     </div>
                     <!-- Portfolio Item 6-->
@@ -99,7 +117,7 @@
                             <div class="portfolio-item mx-auto">
                                 <img class="img-fluid" src="assets/gifs/tai.gif" alt="..." />
                             </div>
-                            <p class="h3 text-center mt-2">The Atlantis Inquiry</p>
+                            <p class="h4 text-center mt-2">The Atlantis Inquiry (Unity/C#)</p>
                         </a>
                     </div>
                     <!-- Portfolio Item 5-->
@@ -108,7 +126,7 @@
                             <div class="portfolio-item mx-auto">
                                 <img class="img-fluid" src="assets/gifs/btm.gif" alt="..." />
                             </div>
-                            <p class="h3 text-center mt-2">Beware the Mines</p>
+                            <p class="h4 text-center mt-2">Beware the Mines (Unity/C#)</p>
                         </a>
                     </div>
                     <!-- Portfolio Item 4-->
@@ -117,7 +135,7 @@
                             <div class="portfolio-item mx-auto">
                                 <img class="img-fluid" src="assets/gifs/birb.gif" alt="..." />
                             </div>
-                            <p class="h3 text-center mt-2">Marvellous Bird Photography</p>
+                            <p class="h4 text-center mt-2">Marvellous Bird Photography (Unity/C#)</p>
                         </a>
                     </div>
                     <!-- Portfolio Item 3-->
@@ -126,7 +144,7 @@
                             <div class="portfolio-item mx-auto">
                                 <img class="img-fluid" src="assets/gifs/nightwatch.gif" alt="..." />
                             </div>
-                            <p class="h3 text-center mt-2">Nightwatch</p>
+                            <p class="h4 text-center mt-2">Nightwatch (Unity/C#)</p>
                         </a>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -135,7 +153,7 @@
                             <div class="portfolio-item mx-auto">
                                 <img class="img-fluid" src="assets/gifs/dice.gif" alt="..." />
                             </div>
-                            <p class="h3 text-center mt-2">Journey to Paradice</p>
+                            <p class="h4 text-center mt-2">Journey to Paradice (Unity/C#)</p>
                         </a>
                     </div>
                     <!-- Portfolio Item 1-->
@@ -144,7 +162,7 @@
                             <div class="portfolio-item mx-auto">
                                 <img class="img-fluid" src="assets/gifs/shallow.gif" alt="..." />
                             </div>
-                            <p class="h3 text-center mt-2">Shallow Worlds</p>
+                            <p class="h4 text-center mt-2">Shallow Worlds (Unity/C#)</p>
                         </a>
                     </div>
                 </div>
