--- a/project10.html
+++ b/project10.html
@@ -40,58 +40,54 @@
                 <div class="row text-secondary justify-content-center">
                     <div class="col-lg-10">
                         <!-- Masthead Heading-->
-                        <h1 class="page-section-heading text-secondary pt-6 mb-0">Capture the Planets</h1>
+                        <h1 class="page-section-heading text-secondary pt-6 mb-0">Monza Run</h1>
                         <!-- Divider-->
                         <div class="divider-custom mb-2" style="justify-content:left;">
-                            <div class="divider-custom-line2" style="max-width:35rem;"></div>
+                            <div class="divider-custom-line2" style="max-width:21rem;"></div>
                         </div>
                         <!-- Masthead Subheading-->
-                        <p class="lead text-secondary mb-4">As a mentee under Ubisoft's Develop at Ubisoft programming mentorship program, I created a 2D game named Capture the Planets from scratch using the provided C++ API, under guidance of an expert programmer at Ubisoft.</p>
-                        <p class="lead text-secondary mb-4">I am currently working on an update for this game and will be uploading the executable for it in the near future!</p>
+                        <p class="lead text-secondary mb-4">An OpenGL runner game demo I made as part of my computer graphics module coursework.</p>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-7">
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">My work</p></div>
                         <ul>
-                            <li><p class="h5" style="font-weight:500;">Got familiar with the provided API and built my game on it.</p></li>
-                            <li><p class="h5" style="font-weight:500;">Used finite state machines for planets' capturing mechanic and enemy AI's behaviour.</p></li>
-                            <li><p class="h5" style="font-weight:500;">Used object-pooling for shooting.</p></li>
-                            <li><p class="h5" style="font-weight:500;">Implemented object-component systems, collision detection and handling.</p></li>
-                            <li><p class="h5" style="font-weight:500;">Experimented with AI pathfinding algorithms and entity component systems.</p></li>
+                            <li><p class="h5" style="font-weight:500;">Created the track and terrain using splines. Applied texture mapping.</p></li>
+                            <li><p class="h5" style="font-weight:500;">Created ligtposts and trophy stands from my own primitive programmable mesh code. Mapped textures for the stands.</p></li>
+                            <li><p class="h5" style="font-weight:500;">Programmatically placed the start overhead lighposts and obstables.</p></li>
+                            <li><p class="h5" style="font-weight:500;">Implemented car controls.</p></li>
+                            <li><p class="h5" style="font-weight:500;">Implemented a night mode and spot lights in the shader. Programmatically positioned and oriented them.</p></li>
+                            <li><p class="h5" style="font-weight:500;">Implemented camera techniques using TNB frame: 1st person, 3rd person, cinematic and top-down.</p></li>
+                            <li><p class="h5" style="font-weight:500;">Implemented the HUD.</p></li>
                         </ul>                        
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Outcomes</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">I had a great experience learning from my mentor.</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">I learned how to write organized and structured code.</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">I learned about scope and time management, working incrementally, making fast and simple prototypes.</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">I created a game that I love from scratch using C++ and presented it to a group of developers and other mentees at Ubisoft Leamington.</p></div>
                     </div>
                     <div class="col-lg-3 text-end">
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Date</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Oct 2023 - Jan 2024</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Feb 2024 - May 2024</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Role</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">All</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Project Type</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Solo - Mentorship</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Solo - Coursework</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Link</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Soon!</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Engine</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Custom API</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Custom OpenGL</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Language</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">C++</p></div>
                     </div>
                 </div>
                 <div class="row justify-content-center mt-5">
                     <iframe width="1024" height="768"
-                        src="https://www.youtube.com/embed/Mf7QNJf8AF8">
+                        src="https://www.youtube.com/embed/z8OmhoS3ixU">
                     </iframe>
                 </div>
                 <div class="row mt-5 text-center">
                     <div class="col-lg-6">
-                        <a class="btn btn-dark mx-1" href="project10.html"><p class="h4 mb-0" style="font-weight: 550;"><i class="fas fa-fw fa-circle-left me-2"></i>Previous Project</p></a>
+                        <a class="btn btn-dark mx-1" href="project11.html"><p class="h4 mb-0" style="font-weight: 550;"><i class="fas fa-fw fa-circle-left me-2"></i>Previous Project</p></a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="btn btn-dark mx-1" href="project8.html"><p class="h4 mb-0" style="font-weight: 550;">Next Project<i class="fas fa-fw fa-circle-right ms-2"></i></p></a>
+                        <a class="btn btn-dark mx-1" href="project9.html"><p class="h4 mb-0" style="font-weight: 550;">Next Project<i class="fas fa-fw fa-circle-right ms-2"></i></p></a>
                     </div>
                 </div>
             </div>
