Moved some stuff around

--- a/index.html
+++ b/index.html
@@ -27,32 +27,14 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About Me<i class="fas fa-user ms-2"></i></a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Portfolio<i class="fas fa-box-archive ms-2"></i></a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About Me<i class="fas fa-user ms-2"></i></a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="assets/AybikeKilic.pdf" target="_blank">Resume<i class="fas fa-file ms-2"></i></a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#pagefooter">Contact & Links<i class="fas fa-envelope ms-2"></i></a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <!-- Masthead-->
-        <header class="masthead bg-primary text-center" id="about">
-            <div class="container d-flex flex-column">
-                <!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase text-secondary mb-0">Aybike Kilic</h1>
-                <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-normal text-secondary mb-0 mt-1" style="font-size: 2.5rem;">Games Programmer</p>
-                <!-- Divider-->
-                <div class="divider-custom mt-3">
-                    <div class="divider-custom-line0"></div>
-                </div>
-                <p class="h4 text-secondary" style="text-align:left">About Me</p>
-                <p class="lead text-secondary" style="text-align:left">Hello! I am Aybike. A programmer based in London, UK. I am an enthusiastic software developer keen on learning, unlearning and relearning. A good team player who enjoys challenges and an analytical thinker with good problem-solving skills.</p>
-                <p class="lead text-secondary" style="text-align:left">I studied computer engineering for my undergraduate and I am currently nearing the end of a master's degree in computer games technology at City, University of London. I have experience with game engines and commonly used game development APIs.</p>
-                <p class="lead text-secondary" style="text-align:left">I have one year of professional working experience as a software engineer using C++ and Qt on development of an educational ship bridge simulator.</p>
-                <p class="lead text-secondary" style="text-align:left">I enjoy participating in game jams whenever possible. So far, I have completed and published games for 8 game jams. I often collaborate with other developers, this allowed me to meet and work with people from different countries and disciplines, honing my soft skills as well as my technical skills.</p>
-            </div>
-        </header>
         <!-- Portfolio Section-->
         <section class="page-section portfolio bg-secondary" id="portfolio">
             <div class="container">
@@ -168,6 +150,24 @@
                 </div>
             </div>
         </section>
+        <!-- Masthead-->
+        <header class="masthead bg-primary text-center" id="about">
+            <div class="container d-flex flex-column">
+                <!-- Masthead Heading-->
+                <h1 class="masthead-heading text-uppercase text-secondary mb-0">Aybike Kilic</h1>
+                <!-- Masthead Subheading-->
+                <p class="masthead-subheading font-weight-normal text-secondary mb-0 mt-1" style="font-size: 2.5rem;">Games Programmer</p>
+                <!-- Divider-->
+                <div class="divider-custom mt-3">
+                    <div class="divider-custom-line0"></div>
+                </div>
+                <p class="h4 text-secondary" style="text-align:left">About Me</p>
+                <p class="lead text-secondary" style="text-align:left">Hello! I am Aybike. A programmer based in London, UK. I am an enthusiastic software developer keen on learning, unlearning and relearning. A good team player who enjoys challenges and an analytical thinker with good problem-solving skills.</p>
+                <p class="lead text-secondary" style="text-align:left">I studied computer engineering for my undergraduate and I am currently nearing the end of a master's degree in computer games technology at City, University of London. I have experience with game engines and commonly used game development APIs.</p>
+                <p class="lead text-secondary" style="text-align:left">I previously worked as a software engineer using C++ and Qt on development of a maritime simulator.</p>
+                <p class="lead text-secondary" style="text-align:left">As a hobby, I enjoy participating in game jams. So far, I have completed and published games for 8 game jams, often collaborating with other developers. These projects allowed me to meet and work with people from different countries and disciplines, honing my soft skills as well as my technical skills.</p>
+            </div>
+        </header>
         <!-- Footer-->
         <footer class="footer text-center" id="pagefooter" style="background-color: #1c2638;">
             <div class="container">
