--- a/project10.html
+++ b/project10.html
@@ -27,8 +27,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="index.html#page-top">Home<i class="fas fa-house ms-2"></i></a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="index.html#portfolio">Portfolio<i class="fas fa-box-archive ms-2"></i></a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="index.html#about">About Me<i class="fas fa-user ms-2"></i></a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="assets/AybikeKilic.pdf" target="_blank">Resume<i class="fas fa-file ms-2"></i></a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#pagefooter">Contact & Links<i class="fas fa-envelope ms-2"></i></a></li>
                     </ul>
@@ -54,7 +54,7 @@
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">My work</p></div>
                         <ul>
                             <li><p class="h5" style="font-weight:500;">Created the track and terrain using splines. Applied texture mapping.</p></li>
-                            <li><p class="h5" style="font-weight:500;">Created ligtposts and trophy stands from my own primitive programmable mesh code. Mapped textures for the stands.</p></li>
+                            <li><p class="h5" style="font-weight:500;">Created lightposts and trophy stands from my own primitive programmable mesh code. Mapped textures for the stands.</p></li>
                             <li><p class="h5" style="font-weight:500;">Programmatically placed the start overhead lighposts and obstables.</p></li>
                             <li><p class="h5" style="font-weight:500;">Implemented car controls.</p></li>
                             <li><p class="h5" style="font-weight:500;">Implemented a night mode and spot lights in the shader. Programmatically positioned and oriented them.</p></li>
