Pyuk video replaces pictures

--- a/project8.html
+++ b/project8.html
@@ -82,30 +82,9 @@
                     </div>
                 </div>
                 <div class="row justify-content-center mt-5">
-                    <div class="col-md-6 col-lg-6 mb-5">
-                        <img class="img-fluid" src="assets/img/pyuk/1.jpg" alt="..." />
-                    </div>
-                    <div class="col-md-6 col-lg-6 mb-5">
-                        <img class="img-fluid" src="assets/img/pyuk/2.jpg" alt="..." />
-                    </div>
-                    <div class="col-md-6 col-lg-6 mb-5">
-                        <img class="img-fluid" src="assets/img/pyuk/3.jpg" alt="..." />
-                    </div>
-                    <div class="col-md-6 col-lg-6 mb-5">
-                        <img class="img-fluid" src="assets/img/pyuk/4.jpg" alt="..." />
-                    </div>
-                    <div class="col-md-6 col-lg-6 mb-5">
-                        <img class="img-fluid" src="assets/img/pyuk/5.jpg" alt="..." />
-                    </div>
-                    <div class="col-md-6 col-lg-6 mb-5">
-                        <img class="img-fluid" src="assets/img/pyuk/6.jpg" alt="..." />
-                    </div>
-                    <div class="col-md-6 col-lg-6 mb-5">
-                        <img class="img-fluid" src="assets/img/pyuk/7.jpg" alt="..." />
-                    </div>
-                    <div class="col-md-6 col-lg-6 mb-5">
-                        <img class="img-fluid" src="assets/img/pyuk/8.jpg" alt="..." />
-                    </div>
+                    <iframe width="1024" height="768"
+                        src="https://youtu.be/GKyAX-nwPck?feature=shared&t=30">
+                    </iframe>
                 </div>
                 <div class="row mt-5 text-center">
                     <div class="col-lg-6">
