--- a/project8.html
+++ b/project8.html
@@ -83,7 +83,7 @@
                 </div>
                 <div class="row justify-content-center mt-5">
                     <iframe width="1024" height="768"
-                        src="https://youtu.be/GKyAX-nwPck">
+                        src=<"https://www.youtube.com/embed/GKyAX-nwPck?si=VlxmGofnj7wiwZ9H&amp;start=30">
                     </iframe>
                 </div>
                 <div class="row mt-5 text-center">
